--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="splash-screen">
-        <img src="assets/logo.png" alt="Logo">
+        <img src="logo.png" alt="Logo">
     </div>
     <div id="headunit-container">
         <header id="top-bar">
@@ -37,8 +37,8 @@
             <div id="gear-indicator">N</div>
             <button id="launch-control-button" class="mode-button">LAUNCH CONTROL</button>
             <div id="indicator-container">
-                <img id="abs-indicator" src="assets/abs.png" alt="ABS" class="indicator-icon">
-                <img id="trs-indicator" src="assets/trs.png" alt="TRS" class="indicator-icon">
+                <img id="abs-indicator" src="abs.png" alt="ABS" class="indicator-icon">
+                <img id="trs-indicator" src="trs.png" alt="TRS" class="indicator-icon">
             </div>
         </footer>
     </div>
