--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     </div>
     <div id="headunit-container">
         <header id="top-bar">
-            <div id="clock">12:00 PM</div>
+            <div id="mode-selector">
+                <button id="mode-eco" class="mode-button">ECO</button>
+                <button id="mode-comfort" class="mode-button active">COMFORT</button>
+                <button id="mode-sport" class="mode-button">SPORT</button>
+                <button id="mode-race" class="mode-button">RACE</button>
+            </div>
             <button id="charge-button" class="mode-button">CHARGE</button>
         </header>
         <main id="main-display">
             <div id="speedometer">
                 <span id="speed-value">0</span><span class="unit"> km/h</span>
+                <img id="warning-indicator" src="warning.png" alt="Warning" class="indicator-icon warning-left">
                 <img id="abs-indicator" src="abs.png" alt="ABS" class="indicator-icon abs-left">
                 <img id="trs-indicator" src="trs.png" alt="TRS" class="indicator-icon trs-right">
             </div>
@@ -30,18 +36,13 @@
             <div id="autonomy">
                 Autonomie: <span id="autonomy-value">30</span> km
             </div>
+            <button id="launch-control-button" class="mode-button">LAUNCH CONTROL</button>
+            <div id="bottom-right-info">
+                <div id="gear-indicator">N</div>
+                <div id="clock-bottom">12:00 PM</div>
+            </div>
         </main>
         <footer id="bottom-bar">
-            <div id="mode-selector">
-                <button id="mode-eco" class="mode-button">ECO</button>
-                <button id="mode-comfort" class="mode-button active">COMFORT</button>
-                <button id="mode-sport" class="mode-button">SPORT</button>
-                <button id="mode-race" class="mode-button">RACE</button>
-            </div>
-            <div id="gear-indicator">N</div>
-            <button id="launch-control-button" class="mode-button">LAUNCH CONTROL</button>
-            <div id="indicator-container">
-                </div>
         </footer>
     </div>
     <script src="script.js?v=1678886400"></script>
